# Goddard

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE-MIT  QUICK_START.md  README.md  SECURITY-STREAM-AUDIT.md  SPEC_REPORT.md  UNUSED_DEPS.md  build.md  daemon-config-hot-reload-design.md  daemon-inbox-concerns.md  daemon-inbox-design.md  daemon_multisession_execution_map.md  get_exports.js  get_exports2.js  package.json  patch-117-spec-changes.md  plan0_contract_identity_freeze.md  planA_storage_identity_migration.md  planB_session_host_multisession.md  planC_daemon_session_control_plane.md  planD_integration_cutover.md  pnpm-lock.yaml  pnpm-workspace.yaml  pr-one-shot-evaluation.md  session-chat-usable-plan.md  skills-lock.json  start.md  test-suite-review.md  test_acp_types.ts  todo.md  tsconfig.base.json  tsconfig.json  tsx-raw-loader.mjs  (+4 more)
.github/: dependabot.yml
.husky/: post-commit  pre-commit  pre-push
app/: .gitignore  .gitrepo  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  best-practices.md  electrobun.config.ts  glossary.md  index.html  keyboard-shortcuts-design.md  package-lock.json  (+11 more)
core/tauri-plugin-ipc/: .gitignore  Cargo.toml  README.md  build.rs  package.json  tsdown.config.ts
core/tauri-plugin-ipc/permissions/: default.toml
core/tauri-plugin-ipc/permissions/autogenerated/: reference.md
core/tauri-plugin-ipc/permissions/schemas/: schema.json
core/tauri-plugin-ipc/src/: client.ts  index.ts  lib.rs  transport.ts
core/tauri-plugin-ipc/test/: transport.test.ts
(+1470 files in other folders)
