[package]
name = "tauri-plugin-ipc"
version = "0.1.0"
license = "MIT"
edition = "2021"
links = "tauri-plugin-ipc"
build = "build.rs"

[lib]
name = "tauri_plugin_ipc"
path = "src/lib.rs"

[build-dependencies]
tauri-plugin = { version = "2.5", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["io-util", "net"] }
urlencoding = "2"
